# twitsent

./: LICENSE
twitsent/: README.md  pyproject.toml  requirements.txt
twitsent/src/twitsent/: Results-Page-TweetSA.html  __main__.py  dateselect.py  keyword_search.py  makescript.py  parse_sentiment.py  plot_sent.py  setup.py  store_data.py  twitterquery.py
twitsent/src/twitsent/storedqueries/: archivedsenti_7.31.22_8.1.22_10_240_.csv  archivedsenti_7.31.22_8.1.22_10_240_sample.csv  archivedtweet_7.31.22_8.1.22_10_240_.csv  tweet_7.31.22_8.1.22_10_240_sample.csv
