[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twitsent"
version = "0.0.7"
authors = [
  { name="Mitchell Hoikka", email="mitchell.hoikka1@gmail.com" },
]
description = "A package for tracking historical sentiment data from Twitter over certain keywords"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/twitsent"
"Bug Tracker" = "https://github.com/pypa/twitsent/issues"
