[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twitsent"
version = "1.0.2"
authors = [
  { name="Mitchell Hoikka", email="mitchell.hoikka1@gmail.com" },
]
dependencies=['requests>=2.27.1',
  'clean-text>=0.6.0',
  'tkcalendar>=1.6.1',
  'matplotlib>=3.5.2',
  'pymannkendall>=1.4.2',
  'nltk>=3.5',
  'unidecode>=1.3.4'
  ]
            
description = "A package for tracking historical sentiment data from Twitter over certain keywords"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/twitsent"
"Bug Tracker" = "https://github.com/pypa/twitsent/issues"
